React routing and redux setup

--- a/android/app/src/main/assets/epub_renderer.html
+++ b/android/app/src/main/assets/epub_renderer.html
@@ -23,7 +23,9 @@
 		<div id="area"></div>
 	</body>
 	<script>
+		//  window.book = ePub(window.BOOK_PATH);
 		window.book = ePub("https://s3.amazonaws.com/epubjs/books/moby-dick.epub");
+
   		window.rendition = window.book.renderTo("area", { method: "continuous",width: 600, height: 400});
   		var displayed = window.rendition.display();
 	</script>
