--- a/android/app/src/main/assets/epub_renderer.html
+++ b/android/app/src/main/assets/epub_renderer.html
@@ -23,10 +23,40 @@
 		<div id="area"></div>
 	</body>
 	<script>
-		//  window.book = ePub(window.BOOK_PATH);
-		window.book = ePub("https://s3.amazonaws.com/epubjs/books/moby-dick.epub");
+		alert(window.BOOK_PATH)
+	
+		window.book = ePub("http://localhost:8080/pg64617.epub");	
+		
+			window.rendition = window.book.renderTo("area", { method: "continuous",width: 600, height: 400});
+			var displayed = window.rendition.display();
 
-  		window.rendition = window.book.renderTo("area", { method: "continuous",width: 600, height: 400});
-  		var displayed = window.rendition.display();
+			// to get book author and title
+			//          
+			  var getUrlPathOfBook = window.book.spine[0].url;
+
+			window.book.loaded.metadata.then((metadata) => {
+			window.ReactNativeWebView.postMessage(
+				JSON.stringify({
+					type: 'metadata',
+					title: metadata.title,
+					author: metadata.creator
+				})
+			);
+		});
+
+
+
+
+
+
+
+
+			window.book.loaded.spine.then((spine) => {
+  spine.each((item) => {
+    item.load().then((contents) => {
+      console.log(contents);
+    });
+  });
+});
 	</script>
 </html>
