--- a/android/app/src/main/assets/epub_renderer.html
+++ b/android/app/src/main/assets/epub_renderer.html
@@ -18,15 +18,15 @@
 				align-items: center;
 			}
 		</style>
+		<script>
+			function renderEpubFile(fileLocation){
+				window.book = ePub(fileLocation);	
+				window.rendition = window.book.renderTo("area", { method: "continuous",width: 600, height: 400});
+				var displayed = window.rendition.display();
+			}
+		</script>
 	</head>
 	<body>
 		<div id="area"></div>
 	</body>
-	<script>
-		//  window.book = ePub(window.BOOK_PATH);
-		window.book = ePub("https://s3.amazonaws.com/epubjs/books/moby-dick.epub");
-
-  		window.rendition = window.book.renderTo("area", { method: "continuous",width: 600, height: 400});
-  		var displayed = window.rendition.display();
-	</script>
 </html>
