--- a/android/app/src/main/assets/epub_renderer.html
+++ b/android/app/src/main/assets/epub_renderer.html
@@ -25,9 +25,9 @@
 			window.book = ePub(fileLocation);
 			window.rendition = window.book.renderTo('area', { method: 'paginated' });
 			window.rendition.display();
-		// 	if (window.LOCATIONS) {
-		// 	window.book.locations.load(window.LOCATIONS);
-		// } else {
+			// 	if (window.LOCATIONS) {
+			// 	window.book.locations.load(window.LOCATIONS);
+			// } else {
 			window.book.ready.then(() => {
 				window.book.locations.generate(1650).then(() => {
 					window.ReactNativeWebView.postMessage(
@@ -35,47 +35,48 @@
 					);
 				});
 			});
-		// }
-			
-		window.rendition.on('started', () => {
-		//	window.rendition.display(window.BOOK_LOCATION);
-			window.ReactNativeWebView.postMessage(
-				JSON.stringify({ type: 'key', key: window.book.key() })
-			);
-		});
+			// }
+
+			window.rendition.on('started', () => {
+				//	window.rendition.display(window.BOOK_LOCATION);
+				window.ReactNativeWebView.postMessage(
+					JSON.stringify({ type: 'key', key: window.book.key() })
+				);
+			});
 
 			// Cover url
 			window.book.ready.then(() => {
-				var coverUrl=null;
- 			 window.book.coverUrl().then((url) => {
-				coverUrl=url;
-				console.log("Cover Url"+url)
- 		 });
-		})
+				var coverUrl = null;
+				window.book.coverUrl().then((url) => {
+					coverUrl = url;
+					console.log("Cover Url" + url)
+				});
+			})
 
 			//const throttledSelectionPostMessage = _.throttle(window.ReactNativeWebView.postMessage, 1500)
 			window.book.loaded.metadata.then((metadata) => {
 
-			window.ReactNativeWebView.postMessage(
-				JSON.stringify({
-					type: 'metadata',
-					title: metadata.title,
-					author: metadata.creator,
-				})
-			);
-		});
-		
-		
-		window.rendition.on("selected", (cfiRange, contents) => {
+				window.ReactNativeWebView.postMessage(
+					JSON.stringify({
+						type: 'metadata',
+						title: metadata.title,
+						author: metadata.creator,
+					})
+				);
+			});
 
-		const frontPart = cfiRange.substring(cfiRange.indexOf(","), 0);
-		const lastChildNode = contents.window.getSelection().baseNode.parentNode.childNodes;
-		const sentenceCfi = frontPart + ",/1:0,/" + lastChildNode.length + ":" + lastChildNode[lastChildNode.length - 1].length + ")";
-		alert(sentenceCfi)
-		window.ReactNativeWebView.postMessage(JSON.stringify({ type: 'selected',
-		sentence: sentenceCfi }));
-});
-	
+
+			window.rendition.on("selected", (cfiRange, contents) => {
+
+				const frontPart = cfiRange.substring(cfiRange.indexOf(","), 0);
+				const lastChildNode = contents.window.getSelection().baseNode.parentNode.childNodes;
+				const sentenceCfi = frontPart + ",/1:0,/" + lastChildNode.length + ":" + lastChildNode[lastChildNode.length - 1].length + ")";
+				window.ReactNativeWebView.postMessage(JSON.stringify({
+					type: 'selected',
+					sentence: sentenceCfi
+				}));
+			});
+
 		}
 	</script>
 </head>
